# alocator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/: alocator.h
src/: alocator.c  main.c
